# defi-web-app

./: .env.local.example  .gitignore  .impeccable.md  .mcp.json  .vercelignore  CLAUDE.md  DOGFOOD_PLAN.md  GHOST_OWNSTACK_EXECUTOR_GOAL.md  GHOST_PRIVATE_WALLET_GOAL.md  I18n.ts  INTEGRATION_ROADMAP.md  MCP_DOGFOOD_REPORT.md  PRIVACY_CIRCUIT_WORKPLAN.md  PRIVACY_DOGFOOD_REPORT.md  PRIVACY_HARDENING_SPEC.md  README.md  RUNBOOK.md  SECURITY_ADVERSARY_GUIDE.md  bun.lockb  bunfig.toml  middleware.ts  next.config.mjs  package-lock.json  package.json  proxy.ts  railway.toml  skills-lock.json  tailwind.config.ts  tsconfig.base.json  tsconfig.json
.github/workflows/: deploy-railway.yml  perps-canaries.yml  test.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/[locale]/: layout.tsx  loading.tsx  page.tsx
app/alpha/: alpha-form.module.css  alpha-form.module.scss  alpha-form.tsx  page.tsx
apps/api/: package.json  tsconfig.json
apps/hyper-mcp/: AGENTS.md  Dockerfile  README.md  hyper.lock.json  package.json  railway.toml  tsconfig.json
apps/keeper-arcade-settler/: package.json
apps/keeper-gateway-signer/: README.md  package.json
apps/keeper-perps-funding/: package.json
apps/keeper-perps-liquidator/: package.json
constants/: ABI.ts  CCIP.ts  Chains.ts  Contracts.ts  Env.ts  Tokens.ts  functions.ts  index.ts
context/: BlockchainContext.tsx  DynamicProviders.tsx  TranslationContext.tsx
deploy/: Dockerfile.bun-service
docs/: DEPLOYMENT_REGISTRY.md  beta-blockers.md  beta-demo-script.md  beta-onboarding.md  bucket-analysis-2026-05-21.md  bufi-hyper-mcp-bug-report.md  bufx-perp-liquidity-bridge-design.md  decentralization-narrative.md  demo-flow.md  demo-wallets.md  dogfood-2026-05-23.md  dogfood-2026-05-24.md  dogfood-mcp-v3.md  hackathon-gap-analysis.md  hookathon-demo.md  loop-12h-prompt.md  loop-state.json  lp-backstop-design.md  matcher-architecture.md  matcher-integration-runbook.md  matcher-mainnet-readiness.md  matcher-reading-notes.md  mcp-hyperspeed-feedback.md  operator-raise-oi-caps.md  positioning.md  privacy-pool-integration.md  roadmap-production-perps.md  single-system-integration-roadmap.md  vortex-matrix-report.md
hooks/: use-clipboard.tsx  use-destination-chain.tsx  use-dynamic-network.ts  use-ens-name.ts  use-peanut.ts  use-qr-code-sharing.ts  use-tokens-or-chain.ts  use-usdc-chain.ts  use-usdc-token-chain.ts  use-user-balance.ts
lib/: utils.ts  wagmi.ts
messages/: en.json  es.json  pt.json
public/: site.webmanifest
references/: README.md  clone-all.sh
reports/: AUDIT_REPORT.md  GATEMAN_DEV_PARITY_TRADING_MACHINE.md
scripts/: bravo-matcher-force-cross.ts  bravo-matcher-livefire-pair.ts  bravo-matcher-livefire.ts  cctp-onramp.output.json  cctp-onramp.ts  dedupe-walletconnect-pino.mjs  demo-wallet-balances.json  dev-down.sh  dev-relayer.sh  dev-up.sh  fund-demo-wallets.ts  m4-demo-broadcast.json  n3-cctp-demo-broadcast.json  n4-cctp-demo-broadcast.json  n4-rebroadcast-swap-leg.ts  n6-gateway-attestation.json  n6-gateway-demo-broadcast.json  n6-gateway-demo-broadcast.ts  n6-tgh-bytecode-audit.md  n7a-tgh-pool-lp-seed.json  n7a-tgh-pool-lp-seed.ts  n8-bidirectional-tgh-pool.json  n8-bidirectional-tgh-pool.ts  perps-arc-replacement-canary.ts  perps-demo-trade.md  perps-demo-trade.output.json  perps-demo-trade.ts  perps-live-arc-replacement-keeper-smoke.ts  perps-local-replacement-canary.ts  perps-replacement-browser-e2e.ts  perps-replacement-e2e-fixture.ts  perps-replacement-e2e-smoke.ts  raise-arc-max-oi.ts  smoke-all.sh  smoke-bento.ts  smoke-perps.ts  smoke-telarana.ts  sync-contracts.mjs  sync-dynamic-webhooks.mjs  v4-swap-pool-demo-cctp.output.json  (+3 more)
services/matcher/: Cargo.toml  README.md  package.json
services/matcher/crates/matcher-reconciler/: Cargo.toml
services/matcher/crates/matcher-reconciler/src/: main.rs
services/matcher/crates/matcher-server/: Cargo.toml
services/matcher/crates/matcher-server/src/: arcade_settler.rs  batch_flusher.rs  book_wal.rs  canary.rs  config.rs  event_subscriber.rs  expiry_sweeper.rs  funding.rs  funding_poker.rs  gateway_signer.rs  grpc.rs  http_health.rs  insurance_fund.rs  intent_translator.rs  intent_validator.rs  lp_router.rs  lp_signer.rs  lp_state.rs  main.rs  mark_price.rs  oi_gate.rs  perps_liquidator.rs  price.rs  pyth_pusher.rs  pyth_pusher_ws.rs  realtime.rs  redis_publisher.rs  replacement_events.rs  sequencer.rs  settlement.rs  spot_executor.rs  telarana_liquidator.rs  tick.rs  tx_submitter.rs  ws_gateway.rs
services/matcher/crates/matcher-server/tests/: live_arc_testnet.rs
services/matcher/crates/matcher-test-harness/: Cargo.toml
services/matcher/crates/matcher-test-harness/src/: main.rs
services/matcher/crates/matcher-types/: Cargo.toml  build.rs
services/matcher/crates/matcher-types/src/: eip712.rs  lib.rs
services/matcher/crates/orderbook/: Cargo.toml  clippy.toml  proptest.toml
services/matcher/crates/orderbook/src/: book.rs  invariants.rs  lib.rs  lp.rs  lp_gate.rs  match_engine.rs  order.rs  price.rs
services/matcher/crates/orderbook/tests/: golden.rs  properties.rs  unit_matching.rs
services/matcher/crates/orderbook/tests/common/: mod.rs
services/matcher/crates/orderbook/tests/golden/: expired_reject.json  fok_reject.json  multi_level_walk.json  partial_fill.json  simple_cross.json
services/matcher/crates/perps-db/: Cargo.toml
services/matcher/crates/perps-db/src/: intent.rs  lib.rs  lp.rs  migrate.rs  store.rs
services/matcher/crates/perps-db/tests/: store.rs
services/matcher/crates/perps-onchain/: Cargo.toml
services/matcher/crates/perps-onchain/src/: bindings.rs  client.rs  deployment.rs  env.rs  lib.rs  market_config.rs  oracle.rs
services/matcher/crates/perps-onchain/tests/: loaders.rs
services/matcher/deploy/: Dockerfile
services/matcher/deployments/: liquidation-router-5042002.json
services/matcher/proto/: matcher.v1.proto
services/matcher/skills/: setup.sh
services/matcher/skills/rust-matcher/: SKILL.md
store/: index.ts  interface.ts
tinybird/: README.md
utils/: animations.ts  index.ts  safe-path.ts  svgs.tsx
(+698 files in other folders)
