[package]
name = "bufi-matcher-test-harness"
description = "Replay corpus + golden-file diff tool for the matcher core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "bufi-matcher-replay"
path = "src/main.rs"

[dependencies]
bufi-orderbook = { path = "../orderbook" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
