[package]
name = "bufi-matcher-types"
description = "Shared types: prost-generated proto messages + EIP-712 schemas for BUFI matcher."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bufi-orderbook = { path = "../orderbook" }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3"

[lints.rust]
unsafe_code = "forbid"
