[package]
name = "bufi-perps-db"
description = "SQLite store for perp order intents. Mirrors @bufi/db (bun:sqlite) so the Rust matcher and the TS keeper read the same trading-machine database during the Phase 3 cutover."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
