[package]
name = "bufi-perps-onchain"
description = "alloy-rs typed bindings + deployment loader for FxOrderSettlement and FxPerpClearinghouse on Arc Testnet."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-network = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-contract = { workspace = true }
alloy-consensus = { workspace = true }
reqwest = { workspace = true }
url = { version = "2", default-features = false }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
